Installation script created (setup.sh), updated readme

--- a/code/ecoPrinter.conf
+++ b/code/ecoPrinter.conf
@@ -3,4 +3,5 @@ Path = tty:serial0
 
 [Bluetooth_Device]
 Name = raspberrypi
-Address = B8:27:EB:**:**:**
+#Raspi's Mac address. setup.sh will automatically fill it
+#Address = B8:27:EB:**:**:**
